docs: rewrite the READMEs for the repository as it now is
One README at the root and one per folder. The root one has the demo link, what each area
does, the architecture, how to run each way, the tests, the Google Cloud setup that sign-in
and Street View need, and a plain statement of what is and is not encrypted: nothing is on
the wire until the stack sits behind TLS, and tokens are signed, not encrypted.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>